<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/doc_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/Titolo"
        android:textColor="@color/darkred"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/close" />

    <TextView
        android:id="@+id/doc_course"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/Corso"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/doc_title"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/school_course"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/doc_tag"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/Tag"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/doc_course"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/tag"
        app:drawableTint="?android:textColorPrimary" />

    <ImageButton
        android:id="@+id/close"
        android:contentDescription="@string/close_description"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_close_24"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:textColorPrimary" />


    <ImageView
        android:id="@+id/pdf_image"
        android:contentDescription="@string/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doc_tag"
        android:background="@color/white"
        android:layout_marginTop="16dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/document_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doc_tag"
            android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>